--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <title>PRO MOBA</title>
     <link rel="icon" href="logoPreto.png" type="image/x-icon"> <!-- Link para o ícone -->
 
-    <link rel="stylesheet" href="/css/style.css">
-    <link rel="stylesheet" href="/css/index.css">
-    <link rel="stylesheet" href="/css/global.css">
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/index.css">
+    <link rel="stylesheet" href="./css/global.css">
     <script>
         document.addEventListener('DOMContentLoaded', function() {
             var year = new Date().getFullYear(); // Obter o ano atual
